--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,35 +2,34 @@ body {
   background-color: #f5c7f7;
 }
 
-
 .top-container {
-background-color: #c54fa7;
+  background-color: #c54fa7;
   width: 100%;
   height: 180px;
   position: fixed;
   margin-top: 0;
   font-family: cursive;
-  }
-.column-container{
-border-left: 122px solid #c54fa7;
-height: 900px;
-float: right;
-right: 100px;
-width: 9%;
 }
 
-.middle-container{
-margin-top: 210px;
-float: left;
-width: 60%;
+.column-container {
+  border-left: 122px solid #c54fa7;
+  height: 900px;
+  float: right;
+  right: 100px;
+  width: 9%;
+}
 
-
+.middle-container {
+  margin-top: 210px;
+  float: left;
+  width: 60%;
 }
 
 .bottom-container {
   background-color: #c54fa7;
   font-family: monospace;
 }
+
 .row:after {
   content: "";
   display: table;
@@ -47,7 +46,7 @@ width: 60%;
   float: left;
 }
 
-.img {
+.myPic{
   width: 20%;
   float: right;
   padding-top: 5px;
@@ -64,11 +63,10 @@ h2 {
   font-family: cursive;
 }
 
-
 h3 {
   color: #8d309b;
 }
 
-h4{
+h4 {
   font-size: 20px;
 }
